[FIX] Hyprland setup
Also adds the 'settings.desktop.terminal'.

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -75,7 +75,7 @@ setw -g mode-keys vi
 bind -T copy-mode-vi v send -X begin-selection
 #   y - to yank the selected
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-#   Prefix+P to paste (Ctrl+Shift+V in the foot terminal works too)
+#   Prefix+P to paste (Ctrl+Shift+V works too)
 bind p paste-buffer
 
 # -- -- Vim mode }}}
@@ -85,9 +85,8 @@ bind p paste-buffer
 
 set -g default-terminal "tmux-256color"
 
-# TODO: 'xterm-256color*' as the 'foot*' alternative for X11.
 # True Color (24-bit) support.
-set -ag terminal-overrides ",foot*:Tc"
+set -ag terminal-overrides ",<<settings.desktop.terminal>>*:Tc"
 
 
 # -- Status line {{{
