--- a/lib/ansible_collections/local/uws/roles/desktop/meta/main.yml
+++ b/lib/ansible_collections/local/uws/roles/desktop/meta/main.yml
@@ -2,5 +2,5 @@
 dependencies:
   - role: "workstation"
   - role: "sddm"
-  - role: "{{ settings.desktop }}"
+  - role: "{{ settings.desktop.de }}"
   - role: "qemu"
