--- a/lib/ansible_collections/local/uws/roles/hyprland/templates/hyprland.conf
+++ b/lib/ansible_collections/local/uws/roles/hyprland/templates/hyprland.conf
@@ -26,8 +26,7 @@ env = GDK_SCALE,2
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
-# Set programs that you use
-$terminal = foot
+$terminal = {{ settings.desktop.terminal }}
 $fileManager = Thunar
 $menu = wofi --show drun
 
@@ -39,9 +38,7 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = waybar -c '{{ waybar.config_dir }}/{{ waybar.config_name }}' -s '{{ waybar.config_dir }}/{{ waybar.style_name }}'
 
 
 #############################
@@ -144,20 +141,19 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-  kb_layout = us,ru
-  kb_options = grp:alt_shift_toggle
 
-    kb_variant =
-    kb_model =
-    kb_rules =
+  kb_layout = {{ kb_layout }}
+  kb_options = {{ kb_options }}
+  kb_variant =
+  kb_model =
+  kb_rules =
 
-    follow_mouse = 1
+  follow_mouse = 1
+  sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
-    touchpad {
-        natural_scroll = false
-    }
+  touchpad {
+    natural_scroll = false
+  }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
