--- a/lib/ansible_collections/local/uws/roles/workstation/tasks/app/tmux.yml
+++ b/lib/ansible_collections/local/uws/roles/workstation/tasks/app/tmux.yml
@@ -24,7 +24,7 @@
     path: "/usr/local/bin/battery"
   register: battery_cli
 
-- name: "/!/ tmux config"
+- name: "/>/ tmux config"
   vars:
     battery: >-
       {{
