--- a/lib/ansible_collections/local/uws/roles/waybar/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/waybar/tasks/main.yml
@@ -23,4 +23,4 @@
     mode: "u=rwx,g=rx,o=rx"
   register: temperature_script_status
 
-- import_tasks: "{{ settings.desktop }}.yml"
+- import_tasks: "{{ settings.desktop.de }}.yml"
