[UPD] uws set roles/niri
Adds the default Niri config and sets the terminal dynamically.

--- a/config/uws.yml
+++ b/config/uws.yml
@@ -5,7 +5,7 @@ settings:
     # Select a Desktop Environment:
     #   * niri
     #   * hyprland
-    de: hyprland
+    de: niri
 
     terminal: foot
 
