--- a/lib/ansible_collections/local/uws/roles/hyprland/templates/hyprland.conf
+++ b/lib/ansible_collections/local/uws/roles/hyprland/templates/hyprland.conf
@@ -71,14 +71,14 @@ general {
   col.active_border = rgba(666666ff)
   col.inactive_border = rgba(595959aa)
 
-    # Set to true enable resizing windows by clicking and dragging
-    # on borders and gaps
-    resize_on_border = true 
+  # Set to true enable resizing windows by clicking and dragging
+  # on borders and gaps
+  resize_on_border = true 
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+  # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+  allow_tearing = false
 
-    layout = dwindle
+  layout = dwindle
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -91,47 +91,46 @@ decoration {
   active_opacity = 1.0
   inactive_opacity = 1.0
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = true
-        size = 3
-        passes = 1
-        
-        vibrancy = 0.1696
-    }
+  # https://wiki.hyprland.org/Configuring/Variables/#blur
+  blur {
+    enabled = true
+    size = 3
+    passes = 1
+    vibrancy = 0.1696
+  }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
+  enabled = true
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+  # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+  bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+  animation = windows, 1, 7, myBezier
+  animation = windowsOut, 1, 7, default, popin 80%
+  animation = border, 1, 10, default
+  animation = borderangle, 1, 8, default
+  animation = fade, 1, 7, default
+  animation = workspaces, 1, 6, default
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+  pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+  preserve_split = true # You probably want this
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = master
+  new_status = master
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+  force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+  disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -158,14 +157,14 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+  workspace_swipe = false
 }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+  name = epic-mouse-v1
+  sensitivity = -0.5
 }
 
 
@@ -177,9 +176,12 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+
+# Exit the hyprland
+#bind = $mainMod SHIFT, E, exit,
+
+bind = $mainMod, Q, killactive,
 bind = $mainMod, T, exec, $terminal
-bind = $mainMod, K, killactive,
-bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, B, exec, firefox
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
