--- a/lib/ansible_collections/local/uws/roles/hyprland/templates/hyprland.conf
+++ b/lib/ansible_collections/local/uws/roles/hyprland/templates/hyprland.conf
@@ -28,7 +28,7 @@ env = GDK_SCALE,2
 
 $terminal = {{ settings.desktop.terminal }}
 $fileManager = Thunar
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 
 #################
@@ -182,9 +182,10 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 bind = $mainMod, Q, killactive,
 bind = $mainMod, T, exec, $terminal
+bind = $mainMod, R, exec, $menu
 bind = $mainMod, B, exec, firefox
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
