[FIX] uws set roles/niri
Rofi launcher hotkey conflict.

Reloading Niri from TTY via SSH. (TODO)

--- a/lib/ansible_collections/local/uws/roles/niri/handlers/main.yml
+++ b/lib/ansible_collections/local/uws/roles/niri/handlers/main.yml
@@ -1,2 +1,3 @@
+# TODO: `niri -- --replace` when running in Niri locally.
 - name: "Reload Niri config"
-  shell: "niri validate && niri -- --replace"
+  shell: "niri validate"
