--- a/lib/ansible_collections/local/uws/roles/waybar/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/waybar/tasks/main.yml
@@ -23,4 +23,43 @@
     mode: "u=rwx,g=rx,o=rx"
   register: temperature_script_status
 
-- import_tasks: "{{ settings.desktop.de }}.yml"
+- name: "/>/ waybar config"
+  vars:
+    temperature: >-
+      {{
+        temperature_cli.stat.exists
+        | ternary('custom/temperature', 'temperature')
+      }}
+    temperature_module: >-
+      {{
+        lookup(
+          'template',
+          'module/'
+            + temperature_cli.stat.exists
+              | ternary('temperature', 'temperature_default')
+            + '.jsonc',
+          variable_start_string="<<",
+          variable_end_string=">>",
+        )
+      }}
+  template:
+    src: "{{ config_name }}"
+    dest: "{{ config_dir }}/"
+    variable_start_string: "<<"
+    variable_end_string: ">>"
+  register: config_status
+
+- name: "/>/ waybar style"
+  copy:
+    src: "{{ style_name }}"
+    dest: "{{ config_dir }}/"
+  register: style_status
+
+- debug:
+    msg: "Handle waybar status"
+  changed_when: >
+    waybar_status.changed
+      or config_status.changed
+      or style_status.changed
+      or temperature_script_status.changed
+  notify: "Restart waybar"
