[FIX] uws set roles/network
Restarts the Network service only if needed. Also, installs the related
GUI packages only if a Desktop Environment if set.

--- a/lib/ansible_collections/local/uws/roles/network/tasks/network_manager.yml
+++ b/lib/ansible_collections/local/uws/roles/network/tasks/network_manager.yml
@@ -7,23 +7,17 @@
       - "networkmanager-l2tp"
       - "networkmanager-openvpn"
   become: true
+  notify: "Restart the Network Manager service"
 
 - name: "/*/ Network Manager"
   copy:
     src: "NetworkManager.conf"
     dest: "/etc/NetworkManager/NetworkManager.conf"
   become: true
+  notify: "Restart the Network Manager service"
 
-# TODO: Only if needed
-- name: "Enable Network Manager service"
-  systemd:
-    name: "NetworkManager.service"
-    enabled: true
-    state: "restarted"
-  become: true
-
-# TODO: Check that system GUI is available
 - name: "/!/ Network Manager GUI"
+  when: settings.desktop.de
   package:
     name:
       - "nm-connection-editor"
