--- a/lib/ansible_collections/local/uws/roles/niri/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/niri/tasks/main.yml
@@ -3,12 +3,35 @@
     name:
       - "niri"
       - "xwayland-satellite"
+
+      # Niri allows the JSON output format. This util is used in some shell
+      # scripts to parse it.
+      - "jq"
+
   become: true
+
+- name: "/!/ Niri user dirs"
+  loop:
+    - "{{ config_dir }}"
+    - "{{ share_dir }}"
+  file:
+    path: "{{ item }}"
+    state: "directory"
+
+- name: "/>/ Niri scripts"
+  loop:
+    - "niri-focus-window.sh"
+  copy:
+    src: "{{ item }}"
+    dest: "{{ share_dir }}/"
+    mode: "u=rwx,g=rx,o=rx"
+
+- import_tasks: "{{ role_path }}/../locale/tasks/keymap/desktop.yml"
 
 - name: "/>/ Niri config"
   template:
     src: "config.kdl"
-    dest: "{{ XDG_CONFIG_HOME }}/niri/"
+    dest: "{{ config_dir }}/"
     variable_start_string: "<<"
     variable_end_string: ">>"
   notify: "Reload Niri config"
