[UPD] uws set roles/hyprland
Switch windows in the current workspace with Alt+Tab.

Mod+F maximizes the window instead of fullscreen.

--- a/lib/ansible_collections/local/uws/roles/hyprland/templates/hyprland.conf
+++ b/lib/ansible_collections/local/uws/roles/hyprland/templates/hyprland.conf
@@ -239,7 +239,11 @@ bind = $mainMod SHIFT, left, resizeactive, -10 0
 bind = $mainMod SHIFT, up, resizeactive, 0 -10
 bind = $mainMod SHIFT, down, resizeactive, 0 10
 
-bind = $mainMod, F, fullscreen
+# Switch windows in the current workspace.
+bind = ALT, Tab, cyclenext,
+
+# Maximize window. Change 1 to 0 for fullscreen.
+bind = $mainMod, F, fullscreen, 1
 
 # Screenshot
 bind = $mainMod, S, exec, grim "$(xdg-user-dir PICTURES)/screen-$(date +%s).png"
