--- a/lib/ansible_collections/local/uws/roles/wayland/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/wayland/tasks/main.yml
@@ -4,6 +4,7 @@
       - "wayland"
       - "wl-clipboard"
       - "xdg-user-dirs"
+      - "swaybg"
   become: true
 
 - import_tasks: "app/{{ settings.desktop.terminal }}.yml"
