[NEW] uws set roles/tmux
Creates the separate tmux role.

UPD README.
UPD Key bindings.
UPD Battery status icon.

--- a/lib/ansible_collections/local/uws/roles/tmux/templates/tmux.conf
+++ b/lib/ansible_collections/local/uws/roles/tmux/templates/tmux.conf
@@ -3,10 +3,13 @@ set -g mouse on
 
 # -- Key bindings {{{
 
-# Rebind Prefix: Ctrl+B (default) -> Alt+\\
+# Rebind the Prefix from default Ctrl+B to Alt+\
 unbind C-b
 set-option -g prefix M-\\
 bind-key M-\\ send-prefix
+
+# Command prompt: Alt+I
+bind-key -n M-i command-prompt
 
 
 # -- -- Windows {{{
@@ -18,7 +21,7 @@ bind-key -n M-l new-window -c "#{pane_current_path}"
 bind-key -n M-, previous-window
 bind-key -n M-. next-window
 
-# Swap window left / right: Ctrl+; / Ctrl+'
+# Swap window left / right: Alt+; / Alt+'
 bind-key -n M-\; { swap-window -t -1; select-window -t -1 }
 bind-key -n M-\' { swap-window -t +1; select-window -t +1 }
 
@@ -36,7 +39,7 @@ bind-key -n M-= split-window -h -c "#{pane_current_path}"
 # Kill pane: Alt+Z
 bind-key -n M-z kill-pane
 
-# Prev / next pane: Alt+, / Alt+.
+# Prev / next pane: Ctrl+, / Ctrl+.
 bind-key -n C-, select-pane -t -1
 bind-key -n C-. select-pane -t +1
 
@@ -50,13 +53,16 @@ bind-key -n M-Down resize-pane -D 1
 bind-key -n M-Left resize-pane -L 1
 bind-key -n M-Right resize-pane -R 1
 
-# Rebind default horizontal splitting: Prefix+-
+# Rebind the default horizontal splitting to Prefix+-
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
-# Rebind default vertival splitting: Prefix+=
+# Rebind the default vertival splitting to Prefix+=
 unbind %
 bind = split-window -h -c "#{pane_current_path}"
+
+# Move pane to the specified window: Alt+M
+bind-key -n M-m command-prompt -p "Send pane to:" "join-pane -t '%%'"
 
 # -- -- Panes }}}
 
