--- a/lib/ansible_collections/local/uws/roles/tmux/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/tmux/tasks/main.yml
@@ -1,5 +1,3 @@
-- include_vars: "tmux.yml"
-
 - name: "/!/ tmux packages"
   package:
     name:
@@ -35,10 +33,8 @@
         temperature_cli.stat.exists | ternary(temperature_status, '')
       }}
   template:
-    src: "{{ uws }}/config/tmux.conf"
+    src: "tmux.conf"
     dest: "{{ ansible_env.HOME }}/.tmux.conf"
-    # The default Jinja "{{ var }}" expressions are not available because of
-    # the Vim folding markers are used in comments.
     variable_start_string: "<<"
     variable_end_string: ">>"
-  notify: "/?/ tmux running"
+  notify: "Running tmux"
