[UPD] uws set roles/niri
Mod+ <> to cycle window focus in the current workspace.

--- a/lib/ansible_collections/local/uws/roles/niri/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/niri/tasks/main.yml
@@ -21,7 +21,7 @@
 - name: "/>/ Niri scripts"
   loop:
     - "app-window.sh"
-    - "cycle-window.sh"
+    - "focus-next-window.sh"
   copy:
     src: "{{ item }}"
     dest: "{{ share_dir }}/"
