[NEW] uws set roles/workstation
Installs `yay` for Arch Linux.

--- a/lib/ansible_collections/local/uws/roles/workstation/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/workstation/tasks/main.yml
@@ -1,2 +1,5 @@
-- import_tasks: "utils.yml"
+- import_tasks: "packages.yml"
 - import_tasks: "vim.yml"
+
+- import_tasks: "yay.yml"
+  when: ansible_os_family == 'Archlinux'
