[UPD] uws set roles/niri
Adds the touchscreen remapping to allows the 3- and 4-finger swipe.

FIXME: input-remapper does not supports swipes. Also, there are no Niri
support for swipes.

--- a/lib/ansible_collections/local/uws/roles/niri/handlers/main.yml
+++ b/lib/ansible_collections/local/uws/roles/niri/handlers/main.yml
@@ -1,3 +1,11 @@
 # TODO: `niri -- --replace` when running in Niri locally.
 - name: "Reload Niri config"
   shell: "niri validate"
+
+- name: "Reload input-remapper"
+  shell: >
+    input-remapper-control \
+      --command start \
+      --device "{{ device }}" \
+      --preset "{{ remapper.preset }}"
+  become: true
