--- a/lib/ansible_collections/local/uws/roles/niri/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/niri/tasks/main.yml
@@ -29,6 +29,8 @@
 
 - import_tasks: "{{ role_path }}/../locale/tasks/keymap/desktop.yml"
 
+- import_tasks: "touchscreen/main.yml"
+
 - name: "/>/ App windows config"
   template:
     src: "app_windows"
