--- a/lib/ansible_collections/local/uws/roles/waybar/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/waybar/tasks/main.yml
@@ -31,22 +31,17 @@
         | ternary('custom/temperature', 'temperature')
       }}
     temperature_module: >-
-      {{
-        lookup(
-          'template',
-          'module/'
-            + temperature_cli.stat.exists
-              | ternary('temperature', 'temperature_default')
-            + '.jsonc',
-          variable_start_string="<<",
-          variable_end_string=">>",
-        )
-      }}
+      module/{{
+        temperature_cli.stat.exists
+        | ternary('temperature', 'temperature_default')
+      }}.jsonc
   template:
     src: "{{ config_name }}"
     dest: "{{ config_dir }}/"
     variable_start_string: "<<"
     variable_end_string: ">>"
+    block_start_string: "<%"
+    block_end_string: "%>"
   register: config_status
 
 - name: "/>/ waybar style"
