[NEW] tmux key bindings for Russian layout
See https://superuser.com/questions/517836/tmux-trying-to-bind-utf8-key

--- a/lib/ansible_collections/local/uws/roles/tmux/templates/tmux.conf
+++ b/lib/ansible_collections/local/uws/roles/tmux/templates/tmux.conf
@@ -10,20 +10,28 @@ bind-key M-\\ send-prefix
 
 # Command prompt: Alt+I
 bind-key -n M-i command-prompt
+# Command prompt: Alt+ш
+bind-key -r 0xD0 display 'ш first byte'
+bind-key -r 0xA8 command-prompt
 
 
 # -- -- Windows {{{
 
 # New window: Alt+L
 bind-key -n M-l new-window -c "#{pane_current_path}"
+bind-key -n M-д new-window -c "#{pane_current_path}"
 
 # Prev / next window: Alt+, / Alt+.
 bind-key -n M-, previous-window
+bind-key -n M-б previous-window
 bind-key -n M-. next-window
+bind-key -n M-ю next-window
 
 # Swap window left / right: Alt+; / Alt+'
 bind-key -n M-\; { swap-window -t -1; select-window -t -1 }
+bind-key -n M-ж { swap-window -t -1; select-window -t -1 }
 bind-key -n M-\' { swap-window -t +1; select-window -t +1 }
+bind-key -n M-э { swap-window -t +1; select-window -t +1 }
 
 # -- -- Windows }}}
 
@@ -38,14 +46,19 @@ bind-key -n M-= split-window -h -c "#{pane_current_path}"
 
 # Kill pane: Alt+Z
 bind-key -n M-z kill-pane
+bind-key -n M-я kill-pane
 
 # Prev / next pane: Ctrl+, / Ctrl+.
 bind-key -n C-, select-pane -t -1
+bind-key -n C-б select-pane -t -1
 bind-key -n C-. select-pane -t +1
+bind-key -n C-ю select-pane -t +1
 
 # Swap pane Down / Up: Ctrl+; / Ctrl+'
 bind-key -n C-\; swap-pane -D
+bind-key -n C-ж swap-pane -D
 bind-key -n C-\' swap-pane -U
+bind-key -n C-э swap-pane -U
 
 # Resize pane: Alt+[Arrow]
 bind-key -n M-Up resize-pane -U 1
@@ -63,6 +76,7 @@ bind = split-window -h -c "#{pane_current_path}"
 
 # Move pane to the specified window: Alt+M
 bind-key -n M-m command-prompt -p "Send pane to:" "join-pane -t '%%'"
+bind-key -n M-ь command-prompt -p "Send pane to:" "join-pane -t '%%'"
 
 # -- -- Panes }}}
 
