[UPD] local.uws.config_option
Creates the config file (and itermediate dirs) if does not exists.

--- a/lib/ansible_collections/local/uws/tests/integration/targets/config_option/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/tests/integration/targets/config_option/tasks/main.yml
@@ -26,3 +26,6 @@
 
 # Add the option to INI file without specifying a section.
 - import_tasks: "test/ignore_section.yml"
+
+# Create the config file if not exists.
+- import_tasks: "test/nonexistent_file.yml"
