[UPD] uws set roles/desktop
Setup the Papirus GTK icon theme.

--- a/config/uws.yml
+++ b/config/uws.yml
@@ -18,6 +18,7 @@ settings:
     gtk:
 
       theme: adw-gtk3-dark
+      icons: Papirus
 
       # Select a preferred interface colors:
       # * dark
