--- a/lib/ansible_collections/local/uws/roles/workstation/tasks/utils.yml
+++ b/lib/ansible_collections/local/uws/roles/workstation/tasks/utils.yml
@@ -5,6 +5,7 @@
       - "patch"
       - "sshfs"
       - "strace"
+      - "wget"
 
       # The unified interface for all archives
       - "atool"
