[NEW] uws set roles/bluetooth
Installs the Bluetooth.

--- a/lib/ansible_collections/local/uws/roles/base/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/base/tasks/main.yml
@@ -1,5 +1,6 @@
-- name: Install packages for NTFS support
+- name: "Base system packages"
   package:
     name:
       - "ntfs-3g"
+      - "usbutils"
   become: true
