[UPD] local.uws.config_option
Allows to pass a bool var as the option value.

--- a/lib/ansible_collections/local/uws/tests/integration/targets/config_option/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/tests/integration/targets/config_option/tasks/main.yml
@@ -29,3 +29,6 @@
 
 # Create the config file if not exists.
 - import_tasks: "test/nonexistent_file.yml"
+
+# Put the bool variable to the `value`.
+- import_tasks: "test/bool_value.yml"
