--- a/lib/ansible_collections/local/uws/roles/desktop/meta/main.yml
+++ b/lib/ansible_collections/local/uws/roles/desktop/meta/main.yml
@@ -3,5 +3,6 @@ dependencies:
   - role: "workstation"
   - role: "sddm"
   - role: "{{ settings.desktop.de }}"
+  - role: "polkit"
   - role: "qemu"
   - role: "firefox"
