[UPD] uws set roles/base
Do not request a password for some sudo operations.

--- a/lib/ansible_collections/local/uws/roles/base/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/base/tasks/main.yml
@@ -1,6 +1,8 @@
-- name: "Base system packages"
+- name: "/!/ Base system packages"
   package:
     name:
       - "ntfs-3g"
       - "usbutils"
   become: true
+
+- import_tasks: "sudo.yml"
