[UPD] uws set roles/tmux
Adds the Continuum plugin.

--- a/lib/ansible_collections/local/uws/roles/tmux/templates/tmux.conf
+++ b/lib/ansible_collections/local/uws/roles/tmux/templates/tmux.conf
@@ -111,6 +111,10 @@ set -ag terminal-overrides ",<<settings.desktop.terminal>>*:Tc"
 
 # -- Status line {{{
 
+# Enable status line explicitly. The tmux-continuum plugin uses a hook in
+# status-right to run, so the status should be 'on'.
+set-option -g status on
+
 set -g status-interval 15  # seconds
 
 set-option -g status-position bottom
@@ -154,7 +158,13 @@ setw -g pane-base-index 1
 
 # -- Plugins {{{
 
+# Restore sessions. Automatically restore on tmux server start (once).
+# Automatically save every `continuum-save-interval` minutes. Or manually
+# save/restore on `Prefix+S`/`Prefix+R`.
 set -g @plugin "tmux-plugins/tmux-resurrect"
+set -g @plugin "tmux-plugins/tmux-continuum"
+set -g @continuum-restore "on"
+set -g @continuum-save-interval "15"  # minutes
 
 # Install plugins: Prefix+I or `~/.tmux/plugins/tpm/bin/install_plugins`
 # Update plugins: Prefix+U or `~/.tmux/plugins/tpm/bin/update_plugins all`
